--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
 streamlit==1.22.0
 streamlit-chat==0.0.2.2
-embedchain
-﻿langchain==0.0.180
-openai==0.27.7
-pandasai==0.2.15
-pdfplumber
-pypdf==3.9.0
-tiktoken==0.4.0
-youtube-transcript-api==0.6.0
+embedchain==0.0.10
